Fix paragraph spacing

--- a/src/components/ChatBubble/ChatBubble.scss
+++ b/src/components/ChatBubble/ChatBubble.scss
@@ -9,7 +9,7 @@
 
   box-shadow: 0px 1px 24px -1px rgba(0, 0, 0, 0.1);
 
-  p {
+  p:last-of-type {
     margin: 0;
   }
 
